@@ -3,6 +3,8 @@ Revision history for cpan-testers-autorun
 
         - autorun-back2.sh
           - SQLite backup database no longer created/updated.
+        - other scripts updated from current live settings.
+        - current crontab updated from live.
 
 1.00    2015-09-14
         - First public release
